# imap-proxy

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  justfile
.github/workflows/: main.yml
src/: proxy.rs
