[package]
name = "imap-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.97"
argh = "0.1.13"
colored = "3.0.0"
imap-codec = "2.0.0-alpha.5"
imap-next = { version = "0.3.1", features = ["ext_id"] }
once_cell = "1.20.3"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["full"] }
tokio-rustls = "0.26.2"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
