[package]
name = "imap-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
colored = "3.0.0"
imap-codec = "2.0.0-alpha.6"
imap-next = { version = "0.3.3", features = ["ext_id"] }
once_cell = "1.21.3"
rustls-native-certs = "0.8.2"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
